--- a/assets/css/WorkflowEditor/_EditableNotes.scss
+++ b/assets/css/WorkflowEditor/_EditableNotes.scss
@@ -2,7 +2,7 @@
   // By default, notes aren't shown. We only show them if they are in focused or
   // if they are non-empty. But we cannot set display:none, because the user
   // may call notesInputRef.current.focus() before they become visible.
-  position: relative; // so we can position `.wf-module .module-notes::before`
+  position: relative; // so we can position `.step .module-notes::before`
 
   .editable-notes {
     position: relative;
