--- a/assets/css/WorkflowEditor/_Step.scss
+++ b/assets/css/WorkflowEditor/_Step.scss
@@ -232,7 +232,7 @@
         color: inherit;
       }
 
-      .WFmodule-icon {
+      .module-icon {
         margin-right: .6rem;
         font-size: 1.4rem;
       }
